working on gettin the board up on the page

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Battleship</title>
+    <link rel="stylesheet" href="../src/index.css"> 
 </head>
 <body>
-    <div id="app"></div>
+    <div id="board"></div>
     <script src="bundle.js"></script>
-    <script src="../src/index.js"></script>
-
 </body>
 </html>
+
