--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../src/index.css"> 
 </head>
 <body>
-    <div id="board"></div>
+    <div id="board" class="board"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
