--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="../src/index.css"> 
 </head>
 <body>
+    <div class="header">
+    <h1>BattleShip</h1>
+    </div>
     <div id="board" class="board"></div>
     <script src="bundle.js"></script>
 </body>
