knight backgorund fixed

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <h1>BattleShip</h1>
     </div>
     <div id="board" class="board"></div>
+    <div id="board2" class="board"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
