--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Battleship</title>
-    <link rel="stylesheet" href="../src/index.css"> 
 </head>
 <body>
-    <div class="header">
-    <h1>BattleShip</h1>
-    </div>
-    <div id="board" class="board"></div>
-    <div id="board2" class="board"></div>
+    <div id="root"></div> 
     <script src="bundle.js"></script>
 </body>
 </html>
+
 
